syntax = "proto3";
package core.eventbus;
option go_package = "./;core";

import "core/user.proto";
import "core/todo.proto";

message EventbusEmpty {}

service UserEventbus {
  rpc UserChange(core.user.UserChangeEvent) returns (EventbusEmpty);
  rpc UserSecurity(core.user.UserSecurityEvent) returns (EventbusEmpty);
}

service TodoEventbus {
  rpc TodoChange(core.todo.TodoChangeEvent) returns (EventbusEmpty);
}
